pxc/tests/test_01_px/constinh3.px
namespace constinh3;
import test_common "";


threaded interface ifoo {
  function long mfoo(long v);
}

threaded struct sfoo : ifoo : {
  function long mfoo(long v) const { // error: constness
    return v + 3;
  }
}

ptr{sfoo} p = ptr{sfoo}(sfoo());
ptr{ifoo} ip = p;
println(ip->mfoo(3));

